--- a/index.html
+++ b/index.html
@@ -280,15 +280,17 @@
                     observation.obsDt = currDate
                 });
                 
-                if (data.length > 1) {                
+                if (data.length > 1) {   
+                                 
                     data.forEach(observation => {
+                    dateObs.push(observation.obsDt)
                     L.circle([observation.lat, observation.lng], {
                         color: 'red',
                         opacity: 0.1,
                         fillColor: '#f03',
                         fillOpacity: 0.3,
                         radius: 10000
-                    }).addTo(layer);
+                    }).bindPopup("Date: "+observation.obsDt.toString().slice(4,6)+"/"+observation.obsDt.toString().slice(6,8)+"/"+observation.obsDt.toString().slice(0,4)+`</br>Location: `+observation.locName+`</br>Bird Info: <a target='_blank' href='https://ebird.org/species/${specCode}'>More Info</a>`).addTo(layer);
                     L.marker([observation.lat, observation.lng]).addTo(fg)
                     })
                     layer.addTo(map)
@@ -297,9 +299,7 @@
                     datesObjArr = []
                     dateArr = []
 
-                    data.forEach(observation => {
-                    dateObs.push(observation.obsDt)
-                    });
+
                     dateSet = new Set(dateObs)
                     dateSet.forEach(date =>{
                     dateArr.push(date)
@@ -354,7 +354,7 @@
                         fillColor: 'blue',
                         fillOpacity: 0.7,
                         radius: 50000
-                    }).addTo(layer);
+                    }).bindPopup("Date: "+observation.obsDt+`</br>Bird Info: <a target='_blank' href='https://ebird.org/species/${speciesCode}'>More Info</a>`).addTo(layer);
                     L.marker([observation.lat, observation.lng]).addTo(fg)
                     })
                     layer.addTo(map)
