--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 z-index: 1;
             }
             img {
-                width: 200px;;
+                width: 40vw;
             }
             .legend {
                 position: absolute;
@@ -227,7 +227,7 @@
 
         var map = L.map('map').setView([40.8, -119.5], 4);
         L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}{r}.{ext}', {
-            attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+            attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>',
             subdomains: 'abcd',
             minZoom: 0,
             maxZoom: 20,
