--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
             }
             #selectors {
                 width: 100%;
-                height: 25vh;
+                height: 20vh;
                 float: left;
+                margin-top: 5vh;
             }
             select {
                 width: 95%;
