--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@
                 background-color: #f1f1f1;
                 margin-top:10px;
             }
+            .select2-selection {
+                font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+                font-size: 12px;
+                font-weight: 500;
+            }
+            .select2-container {
+                font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+                font-size: 12px;
+                font-weight: 500;
+            }
             #dateContainer{
                 text-align: center;
                 font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
