--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             img {
                 width: 300px;;
             }
-            .legend {
+            #legend {
+                display: none;
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -147,7 +148,8 @@
             img {
                 width: 40vw;
             }
-            .legend {
+            #legend {
+                display: none;
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -203,7 +205,7 @@
   <body>
     <div class="title mobile">Migration Tracker</div>
     <div id="mapContainer">
-        <div class="legend"><img src="Legend.png" alt=""></div>
+        <div id="legend"><img src="Legend.png" alt=""></div>
         <div id="map"></div>
     </div>
     <div id = "selectors">
@@ -382,7 +384,7 @@
 
 
         function mapBirds(comName) {
-
+            document.getElementById("legend").style.display = "block";          
             siteCount = 0
             totalCount = 0
             birdDate.textContent = "Last 30 Days";
@@ -414,7 +416,6 @@
                 });
 
                 if (data.length > 1) {   
-                                 
                     data.forEach(observation => {
                         dateObs.push(observation.obsDt)
                     })
@@ -565,6 +566,7 @@
                     birdDate.textContent = "Not many on West Coast. Closest in last 30 Days";
                     document.getElementById("counts").textContent = `Site Count: ${siteCount.toLocaleString()} | Total Count: ${totalCount.toLocaleString()}`
                 } else {
+                    document.getElementById("legend").style.display = "none";          
                     birdDate.textContent = "No birds reported in last 30 days";
                     document.getElementById("counts").textContent = ''
                 }
