--- a/index.html
+++ b/index.html
@@ -450,8 +450,6 @@ crossorigin=""></script>
                     specCode = type.speciesCode
                 }
             })
-            console.log(specCode)
-            console.log(bird)
             fetch(`https://api.ebird.org/v2/data/obs/US-OR-013/recent/${specCode}?back=30&r=US-OR-013,US-OR-031,US-OR-017&includeProvisional=true`, {
                 headers: {
                 "X-eBirdApiToken": apiKey,
@@ -459,8 +457,10 @@ crossorigin=""></script>
                 })
                 .then(response => response.json())
                 .then(data => {
-                    console.log(data)
                     data.forEach(observation => {
+                            var currDateParts = observation.obsDt.substring(0,10).split('-')
+                            var currDate = Number(currDateParts[0]+currDateParts[1]+currDateParts[2])
+                            observation.obsDt = currDate
                             L.marker([observation.lat, observation.lng]).bindPopup("Species: "+observation.comName+"<br>Date: "+observation.obsDt.toString().slice(4,6)+"/"+observation.obsDt.toString().slice(6,8)+"/"+observation.obsDt.toString().slice(0,4)+`</br>Location: `+observation.locName+`</br>Bird Info: <a target='_blank' href='https://ebird.org/species/` + observation.speciesCode +`'>More Info</a>`).addTo(layer);
                         })
                 })
@@ -469,6 +469,7 @@ crossorigin=""></script>
 
         function LocalNotables() {
             if (notables == "off") {
+                document.getElementById("counts").textContent = ''
                 notables = "on"
                 symbType = 'marker'
                 birdDate.textContent = "Last 30 Days";
@@ -480,7 +481,6 @@ crossorigin=""></script>
                 })
                 .then(response => response.json())
                 .then(data => {
-                    console.log(data)
                     data.sort((a, b) => a.obsDt.localeCompare(b.obsDt));
                     birdData = data
                     layer.clearLayers()
@@ -554,6 +554,7 @@ crossorigin=""></script>
                 notables = "off"
                 layer.clearLayers()
                 map.setView([40.8, -119.5], 4)
+                document.getElementById("counts").textContent = ''
             }
         }
     </script>
