--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <input type="range" v-model="sliderValue" min="0" max="30" id="dateSlider">
-        <div id="map" ref="mapContainer"></div>
+        <!-- <div id="map" ref="mapContainer"></div> -->
     </div>
     <div v-show="coverScreen" class="cover-screen">Fetching data...</div>
     <div v-show="showNoDataMessage" class="no-data-message">No recent sightings</div> 
