--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     @media (max-width:700px){
       .dateSlider {
         bottom: 100px;
+        width: 150px;
       }
     }
     .birdList {
